login options created

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         <section>
             <h2>Bangladesh Carz</h2>
             <form>
-                <label for="name">Your Name</label>
-                <input type="text" name="" id="name">
+                <label for="email">Email</label>
+                <input type="email" name="" id="email">
                 
-                <label for="name">Email</label>
-                <input type="text" name="" id="name">
+                <label for="Password">Password</label>
+                <input type="password" name="" id="Password">
+
+            <button type="submit">Log in</button>
                 
             </form>
+        </section>
+        <section>
+            Don't have an account?
+            <a href=" https://talha1320.github.io/Bangladesh-Carz-signup/">Sign up</a> 
         </section>
 
     </main>
